--- a/Knockout/index.html
+++ b/Knockout/index.html
@@ -1,9 +1,96 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
-    <title></title>
+    <title>Data Binding with KnockoutJS</title>
+    <script type='text/javascript' src='Scripts/knockout-3.3.0.js'></script>
 </head>
 <body>
 
+<h1>Hello <span data-bind="text: name"></span></h1>
+
+<h1 data-bind="html: getHtml()"></h1>
+
+<p data-bind="style: { marginBottom: 0, paddingBottom: '1em' }, css: 'myClass'">
+    This text has custom styles and a CSS class.
+</p>
+
+<p data-bind="attr: { id: 'myCustomId' }">
+    This p tag has an id data bound to it.
+</p>
+
+<!--Condition-Based Data Binding-->
+<button type="submit" data-bind="text: (id == 0) ? 'Create' : 'Update'"></button>
+
+<!--Condition data binding with a function-->
+<button type="submit" data-bind="text: (isNew()) ? 'Create' : 'Update'"></button>
+
+<ul>
+    <!-- ko foreach: books -->
+    <li data-bind="text: $data.title"></li>
+    <!-- /ko -->
+</ul>
+
+<table>
+    <thead>
+        <tr>
+            <th>Title</th>
+            <th>ISBN</th>
+            <th>Published</th>
+        </tr>
+    </thead>
+    <tbody data-bind="foreach: books">
+        <tr>
+            <td data-bind="text: title"></td>
+            <td data-bind="text: isbn"></td>
+            <td data-bind="text: $parent.formatDate(publishedDate)"></td>
+        </tr>
+    </tbody>
+</table>
+
+<script>
+
+    var ViewModel = function(name) {
+        var self = this;
+        self.name = name;
+        self.id = 0;
+        self.books = [
+            {
+                title: 'Rapid Application Development With CakePHP',
+                isbn: '1460954394',
+                publishedDate: '2011-02-17'
+            },
+            {
+                title: '20 Recipes for Programming MVC 3: Faster, Smarter Web Development',
+                isbn: '1449309860',
+                publishedDate: '2011-10-14'
+            },
+            {
+                title: '20 Recipes for Programming PhoneGap: Cross-Platform Mobile Development for Android and iPhone',
+                isbn: '1449319548', 
+                publishedDate: '2012-04-06'
+            }
+        ];
+        self.formatDate = function (dateToFormat) {
+            var months = new Array("January", "February", "March", "April",
+                "May", "June", "July", "August", "September", "October",
+                "November", "December");
+            var d = new Date(dateToFormat);
+            return months[d.getMonth()] + ' ' + d.getDate() + ', ' + d.getFullYear();
+        };
+        self.getName = function() {
+                return self.name;
+        },
+        self.getHtml = function() {
+            return 'Hello <em>' + self.name + '</em>!';
+        },
+        self.isNew = function () {
+            return self.id == 0;
+        };
+    };
+
+    var viewModel = new ViewModel('Steve Kennedy');
+    ko.applyBindings(viewModel);
+
+</script>
 </body>
 </html>
